@@ -17,6 +17,9 @@ Unreleased
   "All KARL" tab to "All".  Use peopledirectory.xml to configure it.
   Also added the ability to filter reports by user group membership.
 
+- LP #405361: Selecting a letter in the new people directory did not
+  survive pagination.
+
 3.6 (2009-07-23)
 ----------------
 
